fixed multiple root layout issues
Layout.tsx files for each group all required a html and body tag.

--- a/quick-links/src/app/css/login.module.css
+++ b/quick-links/src/app/css/login.module.css
@@ -1,7 +1,16 @@
 .login {
-  border: 1px solid green;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.loginBox {
+  border: 1px solid green;
+  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
 }
